dotnet_macros/tests/ui/dotnet_methods_disposable_wrong_shape.rs
use dotnet_macros::dotnet_methods;

struct Resource;

#[dotnet_methods(disposable)]
impl Resource {
    pub fn dispose(value: i32) -> i32 {
        value
    }
}

fn main() {}
